--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,11 @@ Pillow
 pymysql
 jupyter
 # pywin32
+dashscope
+pyyaml
+litellm
+fastapi>=0.68.0
+uvicorn>=0.15.0
+pydantic>=1.8.0
+python-multipart>=0.0.5
+openai>=1.0.0
