--- a/configs/database.yaml
+++ b/configs/database.yaml
@@ -4,6 +4,11 @@ database:
   username: root
   password: sale159753
   name: sale
-  type: utf8mb4
+  driver: 'mysql+pymysql'
+  charset: 'utf8mb4' # 明确字符集
   pool_size: 10
-  timeout: 30
+  max_overflow: 30
+  pool_recycle: 3600   # (秒) 连接回收时间，必须小于MySQL的wait_timeout
+  pool_pre_ping: true  # 每次使用前检查连接有效性
+  pool_timeout: 30     # (秒) 从连接池获取连接的超时时间
+  connect_timeout: 10  # (秒) 建立新连接的超时时间
