--- a/configs/database.yaml
+++ b/configs/database.yaml
@@ -1,8 +1,8 @@
 database:
-  host: 120.77.8.73
-  port: 9010
+  host: 127.0.0.1
+  port: 3306
   username: root
-  password: sale159753
+  password: 111111
   name: sale
   driver: 'mysql+pymysql'
   charset: 'utf8mb4' # 明确字符集
